ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: news-ingress
  namespace: news
  labels:
    name: news-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - news.theholistichoof.com
    secretName: news-tls
  rules:
  - host: news.theholistichoof.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: glance-service
            port: 
              number: 8080
